--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <img id="landscape" srcset="images/landscape/museum-320_x_180.jpg 320w,
             images/landscape/museum-480_x_270.jpg 480w,
             images/landscape/museum-640_x_360.jpg 640w,
-            images/landscape/museum-720_x_405.jpg 720w
+            images/landscape/museum-720_x_405.jpg 720w,
             images/landscape/museum-920_x_518.jpg 920w,
             images/landscape/museum-1440_x_810.jpg 1440w,
             images/landscape/museum-1920_x_1080.jpg 1920w,
             images/landscape/museum-2160_x_1215.jpg 2160w,
-            images/landscape/museum-2880_x_1621.jpg 2880w" sizes="(max-width: 320px) 320px,
+            images/landscape/museum-2880_x_1621.jpg 2880w" 
+            sizes="(max-width: 320px) 320px,
           (max-width: 480px) 480px,
           (max-width: 640px) 640px,
           (max-width: 720px) 720px,
@@ -42,7 +43,8 @@
             images/square/museum-1440_x_1440.jpg 1440w,
             images/square/museum-1600_x_1600.jpg 1600w,
             images/square/museum-1920_x_1920.jpg 1920w,
-        images/square/museum-2400_x_2400.jpg 2400w" sizes="(min-width: 480px) 480px,
+        images/square/museum-2400_x_2400.jpg 2400w" 
+        sizes="(min-width: 480px) 480px,
           (min-width: 640px) 640px,
           (min-width: 800px) 800px,
           (min-width: 960px) 960px,
