--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <h4>My Really Cool Blog Post</h4>
     </div>
 
-    <img id="landscape" srcset="images/landscape/museum-320_x_180.jpg 320w,
+    <img id="landscape" 
+    srcset="images/landscape/museum-320_x_180.jpg 320w,
             images/landscape/museum-480_x_270.jpg 480w,
             images/landscape/museum-640_x_360.jpg 640w,
             images/landscape/museum-720_x_405.jpg 720w,
@@ -25,7 +26,7 @@
             images/landscape/museum-1920_x_1080.jpg 1920w,
             images/landscape/museum-2160_x_1215.jpg 2160w,
             images/landscape/museum-2880_x_1621.jpg 2880w" 
-            sizes="(max-width: 320px) 320px,
+    sizes="(max-width: 320px) 320px,
           (max-width: 480px) 480px,
           (max-width: 640px) 640px,
           (max-width: 720px) 720px,
@@ -33,9 +34,12 @@
           (max-width: 1440px) 1440px,
           (max-width: 1920px) 1920px,
           (max-width: 2160px) 2160px,
-          (max-width: 2880px) 2880px" src="images/landscape/museum-920_x_518.jpg" alt="museum">
+          (max-width: 2880px) 2880px" 
+    src="images/landscape/museum-920_x_518.jpg" 
+    alt="museum">
 
-    <img id="square" srcset="images/square/museum-480_x_480.jpg 480w,
+    <img id="square" 
+    srcset="images/square/museum-480_x_480.jpg 480w,
             images/square/museum-640_x_640.jpg 640w,
             images/square/museum-800_x_800.jpg 800w,
             images/square/museum-960_x_960.jpg 960w,
@@ -43,8 +47,8 @@
             images/square/museum-1440_x_1440.jpg 1440w,
             images/square/museum-1600_x_1600.jpg 1600w,
             images/square/museum-1920_x_1920.jpg 1920w,
-        images/square/museum-2400_x_2400.jpg 2400w" 
-        sizes="(min-width: 480px) 480px,
+            images/square/museum-2400_x_2400.jpg 2400w" 
+    sizes="(min-width: 480px) 480px,
           (min-width: 640px) 640px,
           (min-width: 800px) 800px,
           (min-width: 960px) 960px,
@@ -52,7 +56,9 @@
           (min-width: 1440px) 1440px,
           (min-width: 1600px) 1600px,
           (min-width: 1920px) 1920px,
-          (min-width: 2400px) 2400px" src="images/square/museum-960_x_960.jpg" alt="museum">
+          (min-width: 2400px) 2400px" 
+    src="images/square/museum-960_x_960.jpg" 
+    alt="museum">
   </header>
 
 </body>
